<resources>
    <string name="app_name">NFC Handler</string>
    <string name="write_device_id">Write Device ID</string>
    <string name="generate_uuid">generate uuid</string>
    <string name="write_mode">Write Mode</string>
    <string name="get_device_id">Get Device ID</string>
    <string name="write_bluetooth_name">Write bluetooth name</string>
    <string name="get_bluetooth_name">Get bluetooth name</string>
    <string name="generate_bluetooth_name">Generate bluetooth name</string>
    <string name="write_bluetooth_mac_address">Write bluetooth MAC address</string>
    <string name="read_mode">Read mode</string>
    <string name="get_bluetooth_mac_address">Get bluetooth MAC address</string>
</resources>
