<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_device_id"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/write_device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generate_uuid"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/generate_uuid"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_bluetooth_name"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/write_device_bl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generate_bl_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/generate_bluetooth_name"
        android:textSize="15sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/write_mode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/write_mode" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/get_device_id"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/read_device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/get_bluetooth_name"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/read_device_bl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>